add space in buttons

--- a/download.html
+++ b/download.html
@@ -28,26 +28,22 @@
             <h1 class="header center orange-text">Downloads</h1>
             <div class="row center">
                 <h5 class="header col s12 light">Here you can get download links of all official supported Device</h5> </div>
-            
+ &nbsp;             
 <div class="row center"> <a href="http://wip" id="download-button" class="btn-large waves-effect waves-light orange">
-
 Lettuce</a> 
 </div>
-
+&nbsp;  
 <div class="row center"> <a href="http://wip" id="download-button" class="btn-large waves-effect waves-light orange">
-
 OnePlus3</a> 
 
 </div>
-
+&nbsp;  
 <div class="row center"> <a href="http://wip" id="download-button" class="btn-large waves-effect waves-light orange">
-
 One plus 2</a> 
 
 </div>
-
+&nbsp;  
 <div class="row center"> <a href="http://wip" id="download-button" class="btn-large waves-effect waves-light orange">
-
 ms013g</a> 
 
 </div>
