--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             <ul class="right hide-on-med-and-down">
                 <li><a href="#">Home</a></li>
                 <li><a href="download.html">Downloads</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
             <ul id="nav-mobile" class="side-nav">
                 <li><a href="#">Home</a></li>
                 <li><a href="download.html">Downloads</a></li>
+                <li><a href="about.html">About</a></li>
             </ul> <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a> </div>
     </nav>
     <div class="section no-pad-bot" id="index-banner">
