--- a/download.html
+++ b/download.html
@@ -27,7 +27,7 @@
             <br>
             <h1 class="header center orange-text">Downloads</h1>
             <div class="row center">
-                <h5 class="header col s12 light">Here you can get download links of all official supported Device</h5> </div>
+                <h5 class="header col s12 light">Here you can get the download links for all officially supported devices</h5> </div>
  &nbsp;             
 <div class="row center"> <a href="http://wip" id="download-button" class="btn-large waves-effect waves-light orange">
 Lettuce</a> 
@@ -39,7 +39,7 @@ OnePlus3</a>
 </div>
 &nbsp;  
 <div class="row center"> <a href="http://wip" id="download-button" class="btn-large waves-effect waves-light orange">
-One plus 2</a> 
+OnePlus2</a> 
 
 </div>
 &nbsp;  
