Fixed up the text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <br>
             <h1 class="header center orange-text">Cosmic OS</h1>
             <div class="row center">
-                <h5 class="header col s12 light">Cosmic OS Comes With Latest Android Nougat 7.0 Pure Aosp based</h5> </div>
+                <h5 class="header col s12 light">Cosmic OS comes with the latest and greatest Android Nougat 7.0, purely AOSP based</h5> </div>
             <div class="row center"> <a href="http://github.com/cosmic-os" id="download-button" class="btn-large waves-effect waves-light orange">GITHUB</a> </div>
             <br>
             <br> </div>
@@ -44,14 +44,14 @@
                     <div class="icon-block">
                         <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
                         <h5 class="center">Customization</h5>
-                        <p class="light">With Cosmic open OS,Now You have more freedom and more choices, Which will Make Your mobile experience Unique.</p>
+                        <p class="light">With Cosmic OS, you now have more freedom and more choices, which will allow you make your mobile experience unique to you.</p>
                     </div>
                 </div>
                 <div class="col s12 m4">
                     <div class="icon-block">
                         <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
                         <h5 class="center">User Experience Focused</h5>
-                        <p class="light">We Keep this rom battery friendly and We keep it stable as possible .</p>
+                        <p class="light">We have made, and will carry on making, this ROM as battery friendly and stable as possible.</p>
                     </div>
                 </div>
                 <div class="col s12 m4">
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">Team Cosmic OS</h5>
-                    <p class="grey-text text-lighten-4">We are a team of Cosmic OS All are college or School students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+                    <p class="grey-text text-lighten-4">Over at the Cosmic OS team, we are ALL college or school students working on this project like it's our full time job. Any help or support towards the development on this project would be greatly appreciated.</p>
                     <div class="footer-copyright">
                         <div class="container"> Made by <a class="orange-text text-lighten-3" href="http://cosmic-os.github.io">Team Cosmic OS Materialize</a> </div>
                     </div>
